# KerryWeb3Guard

./: .gitignore  README.md  README.telegram-channel-plan.md  README.zh-CN.md
backend/risk-service/: .env.template  pyproject.toml
backend/risk-service/app/: __init__.py  main.py
backend/risk-service/app/api/: router.py
backend/risk-service/app/api/routes/: blacklist.py  learn.py  meta.py  scan.py
backend/risk-service/app/core/: __init__.py  anti_scam_guide.py  settings.py
backend/risk-service/app/providers/: __init__.py  bitquery.py  dexscreener.py  llm.py  source_code.py
backend/risk-service/app/schemas/: blacklist.py  chat.py  common.py  contract.py  learn.py  link.py  meta.py
backend/risk-service/app/services/: blacklist.py  chat_scan.py  contract_scan.py  learn.py  link_scan.py
bot/telegram-bot/: .env.example  README.md  main.py  pyproject.toml
frontend/web/: package-lock.json  package.json
frontend/web/src/: App.css  App.tsx  i18n.ts  index.css
frontend/web/src/content/: contractEducation.ts
